# modern-cpp-playground

./: .gitignore  CMakeLists.txt  README.md
docs/superpowers/plans/: 2026-04-15-cpp-feature-exploration.md  2026-04-15-vscode-config.md
docs/superpowers/specs/: 2026-04-15-cpp-features-design.md  2026-04-15-vscode-config-design.md  2026-04-16-print-demo-design.md
src/chrono_demo/: CMakeLists.txt  main.cpp
src/concepts_demo/: CMakeLists.txt  main.cpp
src/constexpr_demo/: CMakeLists.txt  main.cpp
src/coroutine_demo/: CMakeLists.txt  main.cpp
src/cpp26_demo/: CMakeLists.txt  main.cpp
src/expected_demo/: CMakeLists.txt  main.cpp
src/if_consteval_demo/: CMakeLists.txt  main.cpp
src/if_init_demo/: CMakeLists.txt  main.cpp
src/jthread_demo/: CMakeLists.txt  main.cpp
src/latch_barrier_demo/: CMakeLists.txt  main.cpp
src/mdspan_demo/: CMakeLists.txt  main.cpp
src/optional_demo/: CMakeLists.txt  main.cpp
src/print_demo/: CMakeLists.txt  main.cpp
src/ranges_demo/: CMakeLists.txt  main.cpp
src/spaceship_demo/: CMakeLists.txt  main.cpp
src/span_demo/: CMakeLists.txt  main.cpp
